dev/POCO/TEST/NEG/NSTRUC01.POC
// See if we can misspell a structure field.
#pragma poco echo "expect>fob isn't a member of struct foobar"

struct foobar
	{
	int foo;
	char bar;
	};

main()
{
int i;
struct foobar fb;

fb.fob = 9;
puts("This shouldn't compile");
}
